# spritzer

./: .gitignore  .rustfmt.toml  404.html  CONTRIBUTORS.md  Cargo.toml  LICENSE  README.md  base.css  get-started.html  guide.html  index.html  main.py  package-lock.json  package.json  randomize.html  requirements.txt  setup.py
.github/workflows/: build_and_release.yml  deploy-docs.yml  package.yml
assembly/: Cargo.toml  README.md  build.rs
assembly/compile/: fileutils.rs  generate.rs  mod.rs  snes_data.rs
assets/css/: styles.0c1f0c4c.css  styles.33748c05.css  styles.b245c361.css  styles.f7359ef0.css  styles.fb72bdf7.css
assets/js/: 404.html.3eec13e9.js  404.html.d72249ee.js  414.0579aa9a.js  587.43601982.js  587.a228374c.js  587.db6435ca.js  686.bd229bff.js  686.bd229bff.js.LICENSE.txt  app.10747fd4.js  app.1377bf40.js  app.14e943b8.js  app.3591fdb0.js  app.479d00ec.js  app.48728b28.js  app.64fca859.js  app.6fcd0b86.js  app.7c79ce29.js  app.9ea53b3f.js  app.a8b8facf.js  app.a989a946.js  app.bc44703d.js  app.e42895b2.js  app.eae1708a.js  app.f40074b1.js  app.f930f119.js  get-started.html.6d6a9bcc.js  (+23 more)
common/: Cargo.toml  diff.rs  lib.rs  random.rs  readerwriter.rs
docs/: Cargo.toml  README.md  get-started.md  guide.md  lib.rs  options.rs  randomize.md
docs/.vuepress/: client.js  config.js  index.scss
docs/.vuepress/components/: Confirmation.vue  FileSelect.vue  GameTypeImage.vue  RandomizerForm.vue
python/: Cargo.toml  lib.rs  options.rs  pyproject.toml
src/: main.py  requirements.txt  settings.json  setup.py
ui/: main.py  mainui.py  requirements.txt
(+33 files in other folders)
